--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ alembic==1.14.1
 bandit==1.8.2
 bidict==0.23.1
 blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 coverage==7.6.12
@@ -41,12 +43,14 @@ python-dotenv==1.0.1
 python-engineio==4.11.2
 python-socketio==5.12.1
 PyYAML==6.0.2
+requests==2.32.3
 rich==13.9.4
 simple-websocket==1.1.0
 SQLAlchemy==2.0.38
 stevedore==5.4.0
 tomli==2.2.1
 typing_extensions==4.12.2
+urllib3==2.3.0
 Werkzeug==3.1.3
 wsproto==1.2.0
 WTForms==3.2.1
