--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [flake8]
 max-line-length = 120
-exclude = venv/,__pycache__/
-ignore = E302, W503
+exclude = .venv/,__pycache__/, pytest_cache/
+ignore = E302, W503, F401
