--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ alembic==1.14.1
 bandit==1.8.2
 bidict==0.23.1
 blinker==1.9.0
+boto3==1.36.25
+botocore==1.36.25
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
@@ -25,6 +27,7 @@ importlib_metadata==8.6.1
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
+jmespath==1.0.1
 Mako==1.3.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -39,13 +42,18 @@ Pygments==2.19.1
 pytest==8.3.4
 pytest-cov==6.0.0
 pytest-flask==1.3.0
+pytest-mock==3.14.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-engineio==4.11.2
 python-socketio==5.12.1
 PyYAML==6.0.2
 requests==2.32.3
 rich==13.9.4
+s3transfer==0.11.2
+setuptools==75.8.0
 simple-websocket==1.1.0
+six==1.17.0
 SQLAlchemy==2.0.38
 stevedore==5.4.0
 tomli==2.2.1
