--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.14.1
 bandit==1.8.2
 bidict==0.23.1
 blinker==1.9.0
+boto3==1.36.25
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
