--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ flake8==7.1.1
 Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-Login==0.6.3
+Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
 Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
@@ -42,6 +43,8 @@ Pygments==2.19.1
 pytest==8.3.4
 pytest-cov==6.0.0
 pytest-flask==1.3.0
+pytest-html==4.1.1
+pytest-metadata==3.1.1
 pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
