--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ alembic==1.14.1
 bandit==1.8.2
 bidict==0.23.1
 blinker==1.9.0
-boto3==1.36.25
-botocore==1.36.25
+boto3==1.34.69
+botocore==1.34.69
+celery==5.3.6
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
@@ -53,7 +54,7 @@ python-socketio==5.12.1
 PyYAML==6.0.2
 requests==2.32.3
 rich==13.9.4
-s3transfer==0.11.2
+s3transfer==0.10.0
 setuptools==75.8.0
 simple-websocket==1.1.0
 six==1.17.0
@@ -61,7 +62,7 @@ SQLAlchemy==2.0.38
 stevedore==5.4.0
 tomli==2.2.1
 typing_extensions==4.12.2
-urllib3==2.3.0
+urllib3==1.26.18
 Werkzeug==3.1.3
 wsproto==1.2.0
 WTForms==3.2.1
