--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 alembic==1.14.1
+amqp==5.3.1
+APScheduler==3.11.0
 bandit==1.8.2
 bidict==0.23.1
+billiard==4.2.1
 blinker==1.9.0
 boto3==1.34.69
 botocore==1.34.69
@@ -8,6 +11,9 @@ celery==5.3.6
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.6
 coverage==7.6.12
 dnspython==2.7.0
@@ -15,6 +21,7 @@ email_validator==2.2.0
 exceptiongroup==1.2.2
 flake8==7.1.1
 Flask==3.1.0
+Flask-APScheduler==1.13.1
 Flask-Cors==5.0.0
 Flask-Login==0.6.3
 Flask-Mail==0.10.0
@@ -30,6 +37,7 @@ iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
 jmespath==1.0.1
+kombu==5.4.2
 Mako==1.3.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -38,6 +46,7 @@ mdurl==0.1.2
 packaging==24.2
 pbr==6.1.1
 pluggy==1.5.0
+prompt_toolkit==3.0.50
 pycodestyle==2.12.1
 pyflakes==3.2.0
 Pygments==2.19.1
@@ -55,14 +64,17 @@ PyYAML==6.0.2
 requests==2.32.3
 rich==13.9.4
 s3transfer==0.10.0
-setuptools==75.8.0
 simple-websocket==1.1.0
 six==1.17.0
 SQLAlchemy==2.0.38
 stevedore==5.4.0
 tomli==2.2.1
 typing_extensions==4.12.2
+tzdata==2025.1
+tzlocal==5.3
 urllib3==1.26.18
+vine==5.1.0
+wcwidth==0.2.13
 Werkzeug==3.1.3
 wsproto==1.2.0
 WTForms==3.2.1
