--- a/requirements.txt
+++ b/requirements.txt
@@ -64,10 +64,12 @@ PyYAML==6.0.2
 requests==2.32.3
 rich==13.9.4
 s3transfer==0.10.0
+setuptools==75.8.0
 simple-websocket==1.1.0
 six==1.17.0
 SQLAlchemy==2.0.38
 stevedore==5.4.0
+stripe==11.6.0
 tomli==2.2.1
 typing_extensions==4.12.2
 tzdata==2025.1
