--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ flake8==7.1.1
 Flask==3.1.0
 Flask-APScheduler==1.13.1
 Flask-Cors==5.0.0
+Flask-Limiter>=3.5.0
 Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
