--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ GOOGLE_CLIENT_SECRET=
 AWS_ACCESS_KEY=
 AWS_SECRET_KEY=
 AWS_BUCKET=
+AWS_REGION=
 EMAIL_USER=
 EMAIL_PASSWORD=
 STRIPE_PUBLISHABLE_KEY=
