--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.14.1
 amqp==5.3.1
 APScheduler==3.11.0
 astroid==3.3.9
+async-timeout==5.0.1
 attrs==25.1.0
 bandit==1.8.2
 beautifulsoup4==4.13.3
@@ -25,12 +26,13 @@ Deprecated==1.2.18
 dill==0.3.9
 dnspython==2.7.0
 email_validator==2.2.0
+eventlet==0.39.1
 exceptiongroup==1.2.2
 flake8==7.1.1
 Flask==3.1.0
 Flask-APScheduler==1.13.1
 Flask-Cors==5.0.0
-Flask-Limiter==3.11
+Flask-Limiter==3.11.0
 Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
@@ -39,6 +41,7 @@ Flask-SQLAlchemy==3.1.1
 flask-talisman==1.1.0
 Flask-WTF==1.2.2
 greenlet==3.1.1
+gunicorn==21.2.0
 h11==0.14.0
 idna==3.10
 importlib_metadata==8.6.1
@@ -63,6 +66,7 @@ pillow==11.1.0
 platformdirs==4.3.6
 pluggy==1.5.0
 prompt_toolkit==3.0.50
+psycopg2-binary==2.9.10
 pycodestyle==2.12.1
 pycparser==2.22
 pyflakes==3.2.0
@@ -85,7 +89,6 @@ requests==2.32.3
 rich==13.9.4
 s3transfer==0.10.0
 selenium==4.29.0
-setuptools==75.8.0
 simple-websocket==1.1.0
 six==1.17.0
 sniffio==1.3.1
